[package]
name = "draw-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { version = "3.7.0", features = ["serde", "with_serde", "serde_json"], git = "https://github.com/deltaphc/raylib-rs.git", rev = "03240d0" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
slotmap = { version = "1.0.7", features = ["serde"] }

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
