[package]
name = "draw-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
raylib = { version = "5.0.0", features = ["serde", "with_serde", "serde_json"] }
rfd = "0.14.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
slotmap = { version = "1.0.7", features = ["serde"] }

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
